SCB-Middleware-API-Automation-v2

--- a/src/main/resources/generalConfig.properties
+++ b/src/main/resources/generalConfig.properties
@@ -1,2 +1,2 @@
-toEmails= anilreddy.kotte@optimworks.com,prakhar.verma@360f.com
+toEmails= anilreddy.kotte@optimworks.com,
 subject =API Automation Report
