Updated review comments

--- a/src/main/resources/generalConfig.properties
+++ b/src/main/resources/generalConfig.properties
@@ -1,2 +1,2 @@
-toEmails= anilreddy.kotte@optimworks.com,
-subject =API Automation Report
+toEmails= anilreddy.kotte]ptimworks.com,
+emailSubject = API Automation Report
