--- a/pom.xml
+++ b/pom.xml
@@ -55,4 +55,22 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Add Surefire plugin here -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M9</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/main/resources/${testSuite}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
