--- a/src/main/resources/generalConfig.properties
+++ b/src/main/resources/generalConfig.properties
@@ -1,2 +1,3 @@
-toEmails= anilreddy.kotte]ptimworks.com,
+toEmails= anil.reddy@360f.com,medha.poddar@360f.com,prakhar.verma@360f.com,saksham.bhardwaj@360f.com,anirudh.somani@360f.com
 emailSubject = API Automation Report
+project = SCB-Middleware-API-Automation
