--- a/.github/workflows/restassured.yml
+++ b/.github/workflows/restassured.yml
@@ -1,9 +1,9 @@
 name: Run Rest Assured Tests Every 4 Hours
 
 on:
-  schedule:
-    - cron: '0 */4 * * *'  # Every 4 hours UTC
-  workflow_dispatch:       # Allow manual run from GitHub UI
+  push:
+    branches:
+      - SCB-middleware-API-Automation-V2
 
 jobs:
   test:
@@ -13,15 +13,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Checkout base framework dependency
+        uses: actions/checkout@v3
+        with:
+          repository: 360f-tech/Core_360f_API_Automation
+          path: 360f-tech
+          token: ${{ secrets.PAT}}
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
+
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: maven
+
+      - name: Install base framework to local Maven repository
+        run: |
+          cd 360f-tech
+          mvn clean install -DskipTests
 
       - name: Run tests with Maven
         run: mvn test
 
       - name: Build with Maven and execute api scripts
-        run: mvn clean install test -DtestSuite="test.xml" --file pom.xml
+        run: mvn clean install -Dsurefire.suiteXmlFiles=src/test/resources/test.xml
         continue-on-error: true
