--- a/.github/workflows/restassured.yml
+++ b/.github/workflows/restassured.yml
@@ -39,3 +39,9 @@ jobs:
       - name: Build with Maven and execute api scripts
         run: mvn clean install test -DtestSuite="test.xml" --file pom.xml
         continue-on-error: true
+
+      - name: Upload extent reports to Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+            name: Custom-reports
+            path: test-output/react-report
