--- a/.github/workflows/restassured.yml
+++ b/.github/workflows/restassured.yml
@@ -1,10 +1,9 @@
 name: Run Rest Assured Tests Every 4 Hours
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - SCB-middleware-API-Automation-V2
+  schedule:
+    - cron: '0 */4 * * *'  # Runs every 4 hours (UTC)
+  workflow_dispatch:       # Allows manual triggering from GitHub UI
 
 jobs:
   test:
@@ -19,11 +18,10 @@ jobs:
         with:
           repository: 360f-tech/Core_360f_API_Automation
           path: 360f-tech
-          token: ${{ secrets.PAT}}
+          token: ${{ secrets.PAT }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
-
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -34,14 +32,12 @@ jobs:
           cd 360f-tech
           mvn clean install -DskipTests
 
-    
-
-      - name: Build with Maven and execute api scripts
+      - name: Build with Maven and execute API scripts
         run: mvn clean install test -DtestSuite="test.xml" --file pom.xml
         continue-on-error: true
 
-      - name: Upload extent reports to Artifacts
+      - name: Upload Extent Reports to Artifacts
         uses: actions/upload-artifact@v4
         with:
-            name: Custom-reports
-            path: test-output/react-report
+          name: Custom-reports
+          path: test-output/react-report
