updated SCB api automation frameworkV6

--- a/src/main/resources/generalConfig.properties
+++ b/src/main/resources/generalConfig.properties
@@ -1,4 +1,4 @@
-toEmails=anil.reddy@360f.com,
+toEmails=anil.reddy@360f.com,saksham.bhardwaj@360f.com,anirudh.somani@360f.com,nidhi.somani@360f.com,medha.poddar@360f.com
 emailSubject = API Automation Report
 project = SCB-Middleware-API-Automation
 
