--- a/.github/workflows/restassured.yml
+++ b/.github/workflows/restassured.yml
@@ -4,7 +4,7 @@ on:
    push:
     branches:
       - SCB-middleware-API-Automation-V2
-
+    workflow_dispatch:       # Allows manual triggering from GitHub UI
 jobs:
   test:
     runs-on: ubuntu-latest
