--- a/.github/workflows/restassured.yml
+++ b/.github/workflows/restassured.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - SCB-middleware-API-Automation-V2
     workflow_dispatch:       # Allows manual triggering from GitHub UI
+    schedule:
+      - cron: '0 */4 * * *'   # Every 4 hours (at minute 0)
 jobs:
   test:
     runs-on: ubuntu-latest
