--- a/src/main/resources/generalConfig.properties
+++ b/src/main/resources/generalConfig.properties
@@ -1,5 +1,6 @@
-toEmails=anil.reddy@360f.com,saksham.bhardwaj@360f.com,anirudh.somani@360f.com,nidhi.somani@360f.com
+toEmails=anil.reddy@360f
 emailSubject = API Automation Report
-project = SCB-Middleware-API-Automation
+project = SG - SCB-Middleware-API-Automation
+//.com,saksham.bhardwaj@360f.com,nidhi.somani@360f.com
 
 
