--- a/.github/workflows/restassured.yml
+++ b/.github/workflows/restassured.yml
@@ -3,7 +3,7 @@ name: Run Rest Assured Tests Every 4 Hours
 on:
     workflow_dispatch:       # Allows manual triggering from GitHub UI
     schedule:
-      - cron: '0 */6 * * *'   # Every 6 hours (at minute 0)
+      - cron: '*/10 * * * *'   # Every 10 minutes UTC (also every 10 minutes IST)
 jobs:
   test:
     runs-on: ubuntu-latest
